--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -16,13 +16,32 @@
     background-position: center;
 	background-position: center;
 }
+.gallery-item a{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+    background-size: 100%;
+	height: 20vh;
+    width:  20vh;
+    font-weight: bold;
+	transition: 0.5s ease-in-out;
+	color: rgba(0, 0, 0, 0);
+    background-position: center;
+	background-position: center;
+	text-decoration: none;
+}
+.gallery-item a:hover{
+	transition: 0.5s ease-in-out;
+	color: white;
+    filter: brightness(55%);
+}
 .gallery-item:hover {
 	transition: 0.5s ease-in-out;
 	color: white;
     filter: brightness(55%);
 }
 #img1 {
-	background: url("../../res/img1.jpg");
+	background: url("../../res/img1.png");
     background-size: 100%;
 }
 
