--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -8,8 +8,8 @@
 	align-items: center;
 	justify-content: center;
     background-size: 100%;
-	height: 20vh;
-    width:  20vh;
+	height: 20vw;
+    width:  20vw;
     font-weight: bold;
 	transition: 0.5s ease-in-out;
 	color: rgba(0, 0, 0, 0);
