--- a/src/components/ConnectBar/ConnectBar.css
+++ b/src/components/ConnectBar/ConnectBar.css
@@ -12,11 +12,11 @@
     width: 40%;
 }
 .Connect-Image{
-    height: 8vw;
+    height: calc(5vw + 40px);
     transition: 0.5s ease-in-out;
 }
 .Connect-Image:hover{
-    height: 10vw;
+    height: calc(7vw + 40px);
     animation: rotation 2s infinite ease-in-out;
     transition: 0.1s ease-in-out;
 }
@@ -35,7 +35,7 @@
 }
 
 #connect-button{
-    font-size: 4vw;
+    font-size: calc(2vw + 12px);
     border: 0.3rem black solid;
     color: white;
     text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000,
@@ -69,6 +69,7 @@ u{
     margin-left: 20%;
     margin-right: 20%;
     width: 60%;
+    font-size: calc(3vw+12px);
 }
 
 @keyframes rotation {
